# mitch-rs

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
examples/: join.rs  swarm.rs
fixtures/certs/: README.md  ca-key.pem  ca.json  ca.pem  swarm-peer.json  swarm-peer.p12
proto3/: protomitch.proto
src/: detector.rs  errors.rs  group.rs  lib.rs  member_info.rs  membership.rs  observer.rs  protomitch.rs  protomitch_pb.rs  reactor.rs
