[package]
name = "mitch"
version = "0.0.1-dev"
authors = ["Luca Bruno <luca.bruno@coreos.com>"]

[dependencies]
byteorder = "^1.2.7"
bytes = "^0.4.10"
error-chain = { version = "^0.12.0", default-features = false }
futures = "^0.3.15"
log = "^0.4.6"
names = "^0.11.0"
native-tls = "0.2"
prost = "^0.4.0"
prost-derive = "^0.4.0"
rand = "^0.6.0"
stream-cancel = "0.4"
tokio = "0.1"
tokio-tls = "0.2"

[build-dependencies]
prost-build = "^0.4.0"

[dev-dependencies]
env_logger = "0.6"

[features]
protogen = []
